# GUX2cplusplus

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Cell.cpp  Cell.h  GameLogic.cpp  GameLogic.h  Gui.cpp  Gui.h  Makefile  Player.cpp  Player.h  main.cpp  utils.h
